# io_partition

./: Cargo.toml  Readme.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: partition.rs
src/: lib.rs
