[package]
name = "io_partition"
version = "1.0.0"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"
description = "A library allowing to use just a part of a Read + Seek object"
repository = "https://github.com/marius851000/io_partition"
readme = "Readme.md"
keywords = [ "io", "concurrency" ]
categories = [ "concurrency" ]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
